Deque 코드 수정(직접 구현한 LinkedList 이용)